--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,11 @@
 {
     "name": "lucas/projeto-php",
-    "description": "Projeto desenvolvido na mat\u0000ria eletiva programa\u0000\u0000o web em PHP",
+    "description": "Projeto desenvolvido na aula de eletiva-web em php.",
     "authors": [
         {
-            "name": "Lucas S Corte",
+            "name": "Lucas Corte",
             "email": "corte1994.lc@gmail.com"
         }
     ],
-    "autoload": {
-        "psr-4": {
-            "App\\": "src"
-        }
-    },
     "require": {}
 }
